--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <nav class="page">
                     <a class="home current" href="index.html" >Home</a>
                     <a class="about-me" href="about.html">About me</a>
+                    <a class="view-more" href="view.html">About me</a>
                 </nav>
             </div>
             
