Adding icon to index.html from images folder

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <div class="learning page space">
           <img
             class="header-img icon"
-            src="blog-small-img.png"
+            src="./Images/blog-small-img.png"
             alt="a message icon" />
           <h3 class="header-title">My learning journal</h3>
         </div>
